feat: add k-receipt to admin setting deductions
