# internal/handlers/admin/internal.go
@@ -7,6 +7,7 @@ import (
 var (
 	ErrInvalidRequest = fmt.Errorf("invalid request")
 	ErrDeductPersonal = fmt.Errorf("unable to set personal deduction")
+	ErrDeductKReceipt = fmt.Errorf("unable to set k-receipt deduction")
 )
 
 func toErrorResponse(err error) ErrorResponse {
